bg bottom mobile gap fix / logo max width

--- a/src/components/routes/root/Home.module.scss
+++ b/src/components/routes/root/Home.module.scss
@@ -12,6 +12,7 @@
 }
 
 .logo {
+  max-width: 100%;
   height: 100px;
 }
 
